# nitro-for-ml

./: README.md  main.py  pyproject.toml
config/: iris_experiments.yaml
data/: iris_X_test.jsonl  iris_X_train.jsonl  iris_y_test.jsonl  iris_y_train.jsonl
local/: pyproject.toml
local/src/local/: __init__.py  classifier.py
nitro/: README.md  pyproject.toml
nitro/tests/: test_nitro.py
nitro_archive/: cli.py
scripts/: download_iris_ds.py
src/nitro/: cli.py  core.py
tests/: test_nitro.py
