[project]
name = "nitro"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = []
dependencies = [
    "click",
    "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
nitro = "src.nitro.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
